alert-delivery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-delivery
  namespace: alert-delivery
  labels:
    app: alert-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-delivery
  template:
    metadata:
      labels:
        app: alert-delivery
    spec:
      containers:
        - name: alert-delivery
          image: alert-delivery
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 50m
              memory: 50Mi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 30"]
