alert-delivery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-delivery
  labels:
    selector: alert-delivery
spec:
  selector:
    app: alert-delivery
  ports:
    - name: http
      port: 3000
      targetPort: http
